Fix text alignment

--- a/index.css
+++ b/index.css
@@ -10,10 +10,6 @@ h1{
     margin-bottom: 0px;
 }
 
-p{
-    text-align: justify;
-}
-
 .header{
     margin: 50px;
 }
